Update many things

--- a/INSTALL
+++ b/INSTALL
@@ -11,10 +11,10 @@
     #     sudo apt-get install -y nodejs
 
     mkdir --parent ~/.fonts
-    for font in Go-Mono.tar.xz ComicShannsMono.tar.xz MPlus.tar.xz ; do
+    for font in JetBrainsMono.tar.xz ; do
         if [ ! -f ~/.fonts/"${font}" ]; then
             curl -L -o ~/.fonts/"${font}" \
-                https://github.com/ryanoasis/nerd-fonts/releases/download/v3.1.1/"${font}"
+                https://github.com/ryanoasis/nerd-fonts/releases/download/v3.3.0/"${font}"
             tar xvf ~/.fonts/"${font}" -C ~/.fonts/
             sudo fc-cache -fv
         fi
@@ -36,4 +36,4 @@
  rm -rf ~/.vim
  rm -f ~/.tmux.conf
 
-stow --target=$HOME vim nvim tmux ranger git
+stow --target=$HOME vim nvim tmux ranger git wezterm
